[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/settings.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.207843, 0.309804, 1 )

[node name="BtnBack" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.05
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 50 )
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = -50.0
custom_constants/separation = 100

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
text = "Settings"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 800.0
margin_bottom = 290.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 546.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 1

[node name="VBoxContainerSteeringMode" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 546.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 2

[node name="LabelSteeringMode" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainerSteeringMode"]
margin_left = 319.0
margin_top = 13.0
margin_right = 416.0
margin_bottom = 27.0
text = "Steering mode:"

[node name="BtnSteeringMode" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainerSteeringMode"]
margin_left = 446.0
margin_right = 546.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "normal"

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 546.0
margin_bottom = 110.0
custom_constants/separation = 30
alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_left = 356.0
margin_top = 13.0
margin_right = 416.0
margin_bottom = 27.0
text = "Setting 2:"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_left = 446.0
margin_right = 546.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "Button2"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 800.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 0 )

[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainerSteeringMode/BtnSteeringMode" to="." method="_on_BtnSteeringMode_pressed"]
